deploy/wordpress_con_mysql/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.casa # FQDN del sito da raggiungere -> va inserito in /etc/hosts con l'IP a cui puntare o si fa una entry nel DNS
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wordpress # deve essere uguale al servizio che espone il deploy
            port:
              number: 80
